# rust_plates

./: .gitattributes  .gitignore  README.md
bind_cabi/: Cargo.toml
bind_cabi/clib1_sys/: Cargo.toml  build.rs
bind_cabi/src/: main.rs
bind_nanomsg_compat_cooked/: Cargo.toml  nanomsg_pull  nanomsg_pull.bat  nanomsg_push  nanomsg_push.bat
bind_nanomsg_compat_cooked/nng_sys/: Cargo.toml  build.rs
bind_nanomsg_compat_cooked/nng_sys/nng/: build.bat
bind_nanomsg_compat_cooked/nng_sys/src/: lib.rs
bind_nanomsg_compat_cooked/src/: endpoint.rs  lib.rs  result.rs
bind_nanomsg_cooked/: Cargo.toml  nanomsg_pull  nanomsg_pull.bat  nanomsg_push  nanomsg_push.bat
bind_nanomsg_cooked/nanomsg_sys/: Cargo.toml  build.rs
bind_nanomsg_cooked/nanomsg_sys/nanomsg/: build.sh
bind_nanomsg_raw/: Cargo.toml  nanomsg_pull  nanomsg_pull.bat  nanomsg_push  nanomsg_push.bat
bind_nanomsg_raw/nanomsg_sys/: build.rs  wrapper.h
bind_nanomsg_raw/src/: main.rs
bind_nng_raw/: Cargo.toml  nng_pull  nng_pull.bat  nng_push  nng_push.bat
bind_nng_raw/nng_sys/: Cargo.toml  build.rs  wrapper.h
bind_nng_raw/src/: main.rs
nanomsgrs_sample/: Cargo.toml  nanomsg_pull  nanomsg_pull.bat  nanomsg_push  nanomsg_push.bat
nanomsgrs_sample/nanomsg_sys/: Cargo.toml  build.rs
nanomsgrs_sample/nanomsg_sys/nanomsg/: CMakeLists.txt  README.w32  build.bat  postbuild.vs
nanomsgrs_sample/nanomsg_sys/nanomsg/build.w32/: nanomsg.sln
nanomsgrs_sample/nanomsg_sys/src/: fagnan.rs
nanomsgrs_sample/src/: lib.rs
nngrs_sample/: Cargo.toml
nngrs_sample/nng_sys/: Cargo.toml  build.rs  wrapper.h
(+18 files in other folders)
