[package]
name = "nanomsg_compat_cooked"
version = "0.1.0"
authors = ["latsa <laca@gmx.us>"]
description = "Uses source code from https://github.com/thehydroimpulse/nanomsg.rs"

[lib]
name = "nanomsg_lib"
path = "src/lib.rs"

[[bin]]
name = "nanomsg_compat_cooked"
path = "src/bin/main.rs"

[workspace]

[dependencies.nng_sys]
path = "./nng_sys"

[dependencies]
libc = "*"

